--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Tempplate html-css-js </html-css-js></title>
+        <title> Carosello mono Array </title>
         <link rel="stylesheet" href="css/style.css">
+        <!-- link fontawesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-
+      
+        <div class="container">
+            <button type="submit">
+                <i class="fa-solid fa-arrow-left-long fa-4x"></i>
+            </button>
+            <div class="container-img">
+                <img src="img/01.webp" alt="01">
+            </div>
+            <button  type="submit">
+                <i class="fa-solid fa-arrow-right-long fa-4x "></i>
+            </button>
+        </div>
         <script type="text/javascript" src="js/script.js"></script>
-       
     </body>
 </html>
