aggiunte img 2/5 in display none

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
                 <i class="fa-solid fa-arrow-left-long fa-4x"></i>
             </button>
             <div class="container-img">
-                <img src="img/01.webp" alt="01">
+                <img src="img/01.webp" alt="01" class="visible" >
+                <img src="img/02.webp" alt="02" class="invisible" >
+                <img src="img/03.webp" alt="03" class="invisible">
+                <img src="img/04.webp" alt="04" class="invisible">
+                <img src="img/05.webp" alt="05" class="invisible">
             </div>
             <button  type="submit">
                 <i class="fa-solid fa-arrow-right-long fa-4x "></i>
