--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
             </div>
             <div class="controls-container">
-                <button>
+                <button id="prev-button">
                     &lt;
                 </button>
 
-                <button>
+                <button id="next-button">
                     &gt;
                 </button>
             </div>
